# txm-python

./: .gitignore  CODE_OF_CONDUCT.md  README.md  build.sh  clear_build.sh  pyproject.toml  setup.py
.github/workflows/: python-package.yml
build_system/: build.sh  clear_build.sh  example.env
docs/: HelpTOC.json  Map.jhm  index.html  txm.html
txm/: cli.py  config_manager.py  tmux_wrapper.py  txm_core.py
txm/action_handlers/: command_handler.py  pane_handler.py  session_handler.py
